--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
 fqdn==1.5.1
+gmpy2==2.1.5
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
